--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "v-wave": "^1.5.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
